css/ssp.css
/*!
 * ServerStatusPage.com core stylesheet
 * Copyright 2014
 */


/* Main site header */
.site-header {
  padding: 15px 20px 15px 20px;
  margin: 0 0 5px 0;
  background-color: #333333;
  background-image: url('../images/ssp-logo.png'), url('../images/black-bg.png');
  background-position: 5px 5px;
  background-repeat: no-repeat, repeat;
  border-bottom: 1px solid #bbbbbb;
  height: 110px;
}
.site-header h1 {
  margin: 0;
}
.site-header h1 small {
  font-weight: normal;
  font-size: 20px;
}
.site-header h2 {
  margin: 0;
}

#view-server-panel h3 {
  margin-top: 0px;
}

div.flag-drop {
    position: absolute;
    top: 0px;
    right: 15px;
    background-color: #ffffff;
    border-radius: 0px 0px 5px 5px;
    padding: 0px 8px 0px 8px;
    font-size: 13px;
    border: 1px solid #cccccc;
    border-top: none;
    font-weight: bold;
}
div.flag-drop a {
  text-decoration: none;
  color: black;
}
div.flag-drop > span {
    color: #cccccc;
    font-weight: normal;
    font-size: 13px;
}

/* Main site container */
.site-content {
  margin: 15px 15px 0 15px;
}

.tab-content {
  overflow-y: auto;
  padding-bottom: 15px;
}

#site-error, #loading-indicator {
  padding: 5px;
  width: 175px;
  text-align: center;
  margin: 0 auto 0 auto;
  position: absolute;
  top: -100px;
  left: 0;
  right: 0;
}

.panel-controls {
  margin-bottom: 10px;
}
.panel-controls .pagination-buttons {
  float: right;
}
.panel-controls .view-server-list-button {
  padding-left: 20px;
  padding-right: 20px;
}

.panel-title {
  font-size: 17px;
  font-weight: bold;
  padding-left: 7px;
  color: #444444;
}



table.server-list tr a {
    display: block;
}

table.server-list {
  width: 100%;
  border-spacing: 0;
  border-collapse:separate;
}

table.server-list a {
    text-decoration: none;
}

table.server-list thead tr th {
  font-weight: bold;
  text-align: center;
  padding: 10px;
  border: 1px solid #AEAEAE;
  border-left: none;
  border-right: none;
  background-color: #f5f5f5;
  background-image: url('../images/dust.png');
}

table.server-list thead tr th:hover {
  background-color: #eaeaea;
}

table.server-list thead tr th a {
    display: block;
    padding: 10px;
}

table.server-list thead tr th:first-child {
  border-left: 1px solid #AEAEAE;
  border-radius: 5px 0px 0px 0px;
}

table.server-list thead tr th:last-child {
  border-right: 1px solid #AEAEAE;
  border-radius: 0px 5px 0px 0px;
}

table.server-list tbody tr {
  background-color: #ffffff;
}

table.server-list tbody tr:hover {
  background-color: #eeeeee;
  /*cursor: pointer;*/
}

table.server-list tbody tr td {
  text-align: center;
  padding: 0;
  height: 30px;
}

table.server-list tbody tr td:first-child {
  border-left: 1px solid #AEAEAE;
}
table.server-list tbody tr td:last-child {
  border-right: 1px solid #AEAEAE;
}

table.server-list tbody tr:last-child td {
  border-bottom: 1px solid #AEAEAE;
}

table.server-list tbody tr:last-child td:first-child {
  border-radius: 0px 0px 0px 5px;
  border-bottom: 1px solid #AEAEAE;
  border-right: none;
}

table.server-list tbody tr:last-child td:last-child {
  border-radius: 0px 0px 5px 0px;
  border-bottom: 1px solid #AEAEAE;
  border-left: none;
}

table.server-list tbody td.rank {
  font-size: 20px;
}

table.server-list tbody td.name {
  font-size: 16px;
}

table.server-list tbody td.type {
  font-size: 16px;
}

table.server-list tbody td.votes {
  font-size: 19px;
}

table.server-list tbody td.players {
  font-size: 19px;
}

table.server-list tr a {
    display: block;
    color: inherit;
}





div.uptime-bar {
    position: relative;
    background-image: url('../images/uptime-bg.png');
    background-repeat: repeat-x;
    background-color: #2e2e2e;
    /*border: 1px solid #646464;*/
    border-radius: 5px;
    height: 15px;
    padding: 1px 1px 1px 1px;
}

div.uptime-bar > div {
    background-color: #69aa1a;
    background-image: url('../images/uptime-bar.png');
    background-repeat: repeat-x;
    border: 1px solid #a8d948;
    border-radius: 3px;
    text-align: right;
    font-size: 11px;
    line-height: 11px;
    height: 13px;
    padding: 0;
    color: black;
    font-weight: bold;
    min-width: 25px;
}

tr.sponsored td {
  background-color: #ffe86f; /* FADA5E */
  border-bottom: 7px solid white;
  font-weight: 500;
}

tr.sponsored td:first-child {
  background-image: url('../images/premium-banner.png');
  background-repeat: no-repeat;
}

tr.sponsored:hover td {
  background-color: #ffde2a; /* FFD700 */
}

tr.sponsored td div.rank-val { /* dummy div to allow height adjustment */
  padding: 30px 0 30px 0;
}

